tests/script_errors/mul_overflow/error.txt
Error: 
    2 | unsigned::max * 2;
      | ^^^^^^^^^^^^^^^^^ The binary operation `*` caused an over- or underflow